# audio-encoder

./: CMakeLists.txt  README.md
src/: ByteBuffer.cpp  ByteBuffer.h  CMakeLists.txt  DataChunk.cpp  DataChunk.h  FormatChunk.cpp  FormatChunk.h  MidriseQuantizer.cpp  MidriseQuantizer.h  MidtreadQuantizer.cpp  MidtreadQuantizer.h  QuantizedAudio.h  Quantizer.cpp  Quantizer.h  SampledAudio.cpp  SampledAudio.h  WavAudio.cpp  WavAudio.h  bit.h  main.cpp
test/: CMakeLists.txt  MidriseQuantizer.cpp  bit.cpp
